cabal-version: 2.2
name: unpacked-maybe-text
version: 0.1.0.0
synopsis: maybes of numeric values with fewer indirections
description:
  This library provides specialization of `Maybe ShortText`. When used
  in a data constructor, this can lead to less boxing.
homepage: https://github.com/andrewthad/unpacked-maybe-text#readme
bug-reports: https://github.com/andrewthad/unpacked-maybe-text/issues
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
category: Data
copyright: 2019 Andrew Martin
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/andrewthad/unpacked-maybe-numeric

library
  exposed-modules:
    Data.Maybe.Unpacked.Text.Short
  hs-source-dirs: src
  build-depends:
    , base >=4.10.1.0 && <5
    , text-short >=0.1.3 && <0.2
    , bytestring >=0.10.8 && <0.11
  ghc-options: -Wall -O2
  default-language: Haskell2010
